# zen

./: meson.build
clients/simple-ball/: meson.build
clients/simple-ball/protocols/: meson.build
clients/simple-ball/src/: buffer.cc  buffer.h  cuboid_window.cc  cuboid_window.h  loader.cc  loader.h  main.cc  main.h  meson.build  obj.cc  obj.h  opengl.cc  opengl.h  ray.cc  ray.h
include/zen/: screen.h
include/zen/scene/: scene.h
include/zen/screen/: output.h
zen/: meson.build  scene.c  screen.c  server.c
zen/scene/: scene.c
zen/screen/: output.c  renderer.c  zigzag-layout.c
